--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h2>Get In Touch</h2>
     <h3 id="conclude">If you want to have some discussion or just fun.</h3>
     <p>want to play football or learn to code together? I can also draw you probably.</p>
-    <a class="BUTTON_KGT" href="mailto:adityasingh84780@gmail.com">CONTACT ME</a>
+    <a class="BUTTON_KGT" href="mailto:okboomer@gmail.com">CONTACT ME</a>
   </div>
 </div>
 
