--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
   <a class="footer-link" href="https://www.instagram.com/aditya.kumarsingh.961993/">Instagram</a>
-  <a class="footer-link" href="https://www.aditya84780.github.io/cv">Website</a>
+  <a class="footer-link" href="https://aditya84780.github.io/cv">Website</a>
   <p style="color:#EAF6F6; margin-top:30px; font-size:80%;">© 2020 Aditya Kumar Singh.</p>
 </div>
 
