--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="middle-container">
   <div class="profile">
     <img class="dp" src="images/circle-cropped.jpg" alt="profile-picture">
-    <h2>Hello.</h2>
+    <h2>Ssup!.</h2>
     <p>I am an IITKGP undergrad and aspiring web and game developer.<br>I am an alumnus of DPS Bokaro and that's pretty much it.</p>
   </div>
   <hr>
