--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
 <div class="middle-container">
   <div class="profile">
-    <img class="dp" src="circle-cropped (6).png" alt="profile-picture">
+    <img class="dp" src="propic.jpg" alt="profile-picture">
     <h2>Ssup!.</h2>
     <p>I am an IITKGP undergrad and aspiring web and game developer.<br>I am an alumnus of DPS Bokaro and that's pretty much it.</p>
   </div>
