--- a/index.html
+++ b/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
+<!--I have not yet added tables -->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
     <title>Aditya Kumar Singh</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
 <link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&family=Berkshire+Swash&family=Graduate&family=Lobster&family=Montserrat:wght@100&family=Sacramento&family=Scope+One&display=swap" rel="stylesheet">    <body>
-<div class="top-container">
+<div class="top-container" id="home">
+  <ul>
+    <li><a class="navbar" href="#home">Home</a></li>
+    <li><a class="navbar" href="#intro">Intro</a></li>
+    <li><a class="navbar" href="#skills">Skills</a></li>
+    <li><a class="navbar" href="#contact">Contact</a></li>
+  </ul>
   <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
   <h1>I'm Aditya</h1>
-<h2 class="id">an iit kgp undergrad.</h2>
+<h2 class="id">an IIT Kgp undergrad.</h2>
   <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
 <img class="mountain" src="images/mountain.png" alt="mountain-img">
 </div>
-<div class="middle-container">
+<div class="middle-container" id="intro">
   <div class="profile">
-    <img class="dp" src="propic.jpg" alt="profile-picture">
-    <h2>Ssup!.</h2>
-    <p>I am an IITKGP undergrad and aspiring web and game developer.<br>I am an alumnus of DPS Bokaro and that's pretty much it.</p>
+    <img class="dp" src="images/circle-cropped (6).png" alt="profile-picture">
+    <h2>Look who's here!</h2>
+    <p>I am an IITKGP undergrad and aspiring web developer.<br>I am an alumnus of DPS Bokaro and that's pretty much it for the intro.</p>
   </div>
   <hr>
-  <div class="skills">
+  <div class="skills" id="skills">
     <h2>My Skills.</h2>
     <div class="skill-row">
       <img class="football" src="images/football-players.png" alt="football">
       <h3>Football</h3>
-      <p>I don't play pro football but I surely enjoy it and I'm slighty above amatuer</p>
+      <p>I don't play pro football but I surely enjoy playing it.</p>
     </div>
     <div class="skill-row">
       <img class="sketching" src="images/drawing.png" alt="sketching">
@@ -44,20 +52,20 @@
     </div>
   </div>
   <hr>
-<div class="contact-me">
+<div class="contact-me" id="contact">
     <h2>Get In Touch</h2>
     <h3 id="conclude">If you want to have some discussion or just fun.</h3>
     <p>want to play football or learn to code together? I can also draw you probably.</p>
-    <a class="BUTTON_KGT" href="mailto:okboomer@gmail.com">CONTACT ME</a>
+    <a class="BUTTON_KGT" href="mailto:adityasingh84780@gmail.com">CONTACT ME</a>
   </div>
 </div>
 
 
 <div class="bottom-container">
-  <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+  <a class="footer-link" href="https://www.linkedin.com/in/aditya-kumar-singh-53906b205/">LinkedIn</a>
+  <a class="footer-link" href="#">top</a>
   <a class="footer-link" href="https://www.instagram.com/aditya.kumarsingh.961993/">Instagram</a>
-  <a class="footer-link" href="https://aditya84780.github.io/cv">Website</a>
-  <p style="color:#EAF6F6; margin-top:30px; font-size:80%;">© 2020 Aditya Kumar Singh.</p>
+  <p style="color:#EAF6F6; margin-top:30px; font-size:80%;">© 2021 Aditya Kumar Singh.</p>
 </div>
 
     </body>
