--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="bottom-container">
   <a class="footer-link" href="https://www.linkedin.com/in/aditya-kumar-singh-53906b205/">LinkedIn</a>
   <a class="footer-link" href="#">top</a>
-  <a class="footer-link" href="https://www.instagram.com/aditya.kumarsingh.961993/">Instagram</a>
+  <a class="footer-link" href="https://www.instagram.com/sssinghhhh_/">Instagram</a>
   <p style="color:#EAF6F6; margin-top:30px; font-size:80%;">© 2021 Aditya Kumar Singh.</p>
 </div>
 
